<resources>
    <string name="title_activity_detail_design">DetailDesign</string>
    <string name="double_click_input_text">文字</string>
    <string name="design">设计定制</string>
    <string name="title_activity_my_order">MyOrderActivity</string>
    <string name="detail_order">订单详情</string>
    <string name="my_order">我的订单</string>
    <string name="receiver_address">收货地址</string>
    <string name="square">广场</string>
    <string name="mine">我的</string>
    <string name="exit_app">再按一次，退出App</string>
    <string name="time_text">s后重新发送</string>
    <string name="register_get_pwd">获取验证码</string>

    <!--下拉刷新上拉加载Recy-->
    <string name="listview_header_hint_normal">下拉刷新...</string>
    <string name="listview_header_hint_release">释放刷新...</string>
    <string name="listview_loading">努力加载中...</string>
    <string name="no_more_loading">没有更多内容了</string>
    <string name="refresh_done">刷新完成...</string>
    <string name="title_activity_skin">SkinActivity</string>
    <string name="no_url">没有地址</string>
    <string name="loading">加载中</string>
    <string name="refreshing">正在刷新...</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_no">取消</string>
    <string name="title_dialog">自定义底部菜单</string>
    <string name="no_net">请求失败，请检查网络</string>
    <string name="no_upload_net">网络连接失败,请检查网络</string>
    <string name="load_more_failure">加载更多失败</string>
    <string name="load_failure">加载数据失败</string>
    <string name="refresh_data_failure">刷新数据失败</string>

    <!-- 版本更新 -->
    <string name="txt_update_title">发现新版本</string>
    <string name="check_ingore_update">忽略该版本</string>
    <string name="txt_btn_update">立即更新</string>
    <string name="txt_btn_cancel">以后再说</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="permission_tip">您未允许衣加一获取手机状态权限,我们不会收集您的信息,您可以在系统设置中开启</string>
    <string name="downloading_info">正在下载</string>
    <string name="update_notify_content">最新版应用继续下载，请稍等..</string>
    <string name="begin_download">开始下载</string>
</resources>
