<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="240dp"
    android:id="@+id/llayout_update"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_newVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/txt_update_title_margin"
        android:gravity="center"
        android:text="@string/txt_update_title"
        android:textColor="@color/txt_update_title"
        android:textSize="@dimen/txt_update_title_size"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/glitter" />

    <TextView
        android:id="@+id/txt_updateLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/txt_update_log_margin" />

    <CheckBox
        android:id="@+id/check_ignore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/check_ignore_update_margin"
        android:text="@string/check_ingore_update"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_install"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_update_height"
            android:layout_margin="@dimen/btn_update_margin"
            android:layout_weight="1"
            android:background="@color/bg_btn_update"
            android:text="@string/txt_btn_update"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_btn_update_size"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_cancel_update_height"
            android:layout_margin="@dimen/btn_cancel_margin"
            android:layout_weight="1"
            android:background="@color/bg_btn_cancel_update"
            android:text="@string/txt_btn_cancel"
            android:textSize="@dimen/txt_btn_update_size"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</LinearLayout>
